--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,38 +137,33 @@
 
     <!-- Button -->
     <style name="Button" parent="Base.Widget.AppCompat.Button">
-        <item name="android:padding">16dp</item>
         <item name="android:minHeight">36dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
-    </style>
-
-    <style name="Button.Primary" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_primary</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="elevation">4dp</item>
-        <item name="android:padding">16dp</item>
-        <item name="android:minHeight">36dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
-    </style>
-
-    <style name="CompareButton" parent="Widget.AppCompat.ActionButton">
-        <item name="android:textAllCaps">false</item>
-        <item name="elevation">4dp</item>
         <item name="android:paddingTop">@dimen/margin_padding_xsmall</item>
         <item name="android:paddingBottom">@dimen/margin_padding_xsmall</item>
-        <item name="android:paddingStart">@dimen/margin_padding_small</item>
-        <item name="android:paddingEnd">@dimen/margin_padding_small</item>
-        <item name="android:minHeight">36dp</item>
-        <item name="android:minWidth">120dp</item>
+        <item name="android:paddingStart">@dimen/margin_padding_normal</item>
+        <item name="android:paddingEnd">@dimen/margin_padding_normal</item>
+        <item name="elevation">4dp</item>
     </style>
 
-    <style name="CompareButton.Primary" parent="CompareButton">
+    <style name="Button.Primary" parent="Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_primary</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Button.Secondary" parent="Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_primary_stroke</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="CompareButton.Primary" parent="Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/button_primary</item>
     </style>
 
-    <style name="CompareButton.Secondary" parent="CompareButton">
+    <style name="CompareButton.Secondary" parent="Button">
         <item name="android:background">@drawable/button_primary_stroke</item>
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
