EOR-109 update display price in order detail bar

--- a/app/src/main/res/layout/layout_order_detail_bar.xml
+++ b/app/src/main/res/layout/layout_order_detail_bar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintBottom_toBottomOf="parent">
@@ -37,12 +38,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_padding_normal"
-            android:text="@string/label_order_total"
             android:textColor="@color/blackText"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnOderDetail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel"
+            tools:text="@string/label_order_total" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnOderDetail"
