--- a/app/src/main/res/layout/item_order_detail.xml
+++ b/app/src/main/res/layout/item_order_detail.xml
@@ -62,7 +62,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/margin_padding_small"
         android:background="@color/lineColor"
-        app:layout_constraintEnd_toEndOf="@+id/tvTotalValue"
+        app:layout_constraintEnd_toEndOf="@+id/tvTotal"
         app:layout_constraintStart_toStartOf="@+id/tvTotalLabel"
         app:layout_constraintTop_toBottomOf="@id/tvTotalLabel" />
 
