EOR-109 improved showing order detail bar

--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -23,6 +23,9 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:overScrollMode="never"
-        android:padding="@dimen/margin_padding_small" />
+        android:paddingStart="@dimen/margin_padding_small"
+        android:paddingTop="@dimen/margin_padding_small"
+        android:paddingEnd="@dimen/margin_padding_small"
+        android:paddingBottom="@dimen/app_bottom_bar_size" />
 
 </LinearLayout>
