--- a/app/src/main/res/layout/layout_order_detail_bar.xml
+++ b/app/src/main/res/layout/layout_order_detail_bar.xml
@@ -2,8 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/orderDetailLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent">
 
     <View
@@ -12,7 +14,6 @@
         android:background="@drawable/shadow_top" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/orderDetailLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/margin_padding_xsmall"
@@ -51,6 +52,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button_primary_stroke"
             android:text="@string/view_order_detail"
+            android:textAllCaps="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
