EOR-109 Fix display order detail bar

--- a/app/src/main/res/layout/fragment_delivery_options.xml
+++ b/app/src/main/res/layout/fragment_delivery_options.xml
@@ -21,6 +21,8 @@
         android:id="@+id/delivery_options_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingBottom="@dimen/app_bottom_bar_size"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
