--- a/app/src/main/res/layout/fragment_home_delivery.xml
+++ b/app/src/main/res/layout/fragment_home_delivery.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/app_bottom_bar_size">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/txt_header_home_delivery"
