--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -5,15 +5,15 @@
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/app_bottom_bar_size"
+    android:clipToPadding="false"
     android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_padding_normal"
-        android:layout_marginLeft="@dimen/margin_padding_normal"
         android:layout_marginEnd="@dimen/margin_padding_normal"
-        android:layout_marginRight="@dimen/margin_padding_normal"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
