--- a/app/src/main/res/layout/fragment_payment_transfers.xml
+++ b/app/src/main/res/layout/fragment_payment_transfers.xml
@@ -43,6 +43,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/app_bottom_bar_size"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true">
