--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,12 @@
         <item name="android:textColor">@color/nameProductColor</item>
     </style>
 
+    <style name="textProductSale">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="PowerBuyTabTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
         <item name="android:textSize">19sp</item>
     </style>
