--- a/app/src/main/res/drawable/bg_badge_unselected.xml
+++ b/app/src/main/res/drawable/bg_badge_unselected.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-x    <stroke
+    <solid android:color="@color/transparent" />
+    <stroke
         android:width="1dp"
-        android:color="@color/gray" />
+        android:color="@color/badge" />
 </shape>
