--- a/app/src/pwb/res/layout/app_bar_main.xml
+++ b/app/src/pwb/res/layout/app_bar_main.xml
@@ -36,6 +36,13 @@
             android:layout_gravity="end|center_vertical"
             android:layout_margin="8dp" />
 
+        <cenergy.central.com.pwb_store.view.PowerBuyShoppingCartView
+            android:id="@+id/shopping_cart"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="10dp"/>
     </androidx.appcompat.widget.Toolbar>
 
 </com.google.android.material.appbar.AppBarLayout>
