--- a/app/src/main/res/layout/list_item_freebie.xml
+++ b/app/src/main/res/layout/list_item_freebie.xml
@@ -41,6 +41,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgProduct"/>
 
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/tvOutOfStock"
+        style="@style/TextAppearance.AppCompat.Body2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_padding_normal"
+        android:text="@string/freebie_out_of_stock"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imgProduct"
+        app:layout_constraintTop_toTopOf="@+id/imgProduct"
+        app:layout_constraintEnd_toEndOf="@+id/imgProduct"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
