--- a/app/src/main/res/layout/fragment_promotion.xml
+++ b/app/src/main/res/layout/fragment_promotion.xml
@@ -18,6 +18,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/groupDisplayPromotion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="badgeRecycler,layoutPromotionTitle,displayPromotionRecycler"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/badgeRecycler"
         android:layout_width="0dp"
