--- a/app/src/main/res/layout/fragment_product_extension.xml
+++ b/app/src/main/res/layout/fragment_product_extension.xml
@@ -27,7 +27,7 @@
     <FrameLayout
         android:id="@+id/extensionContainer"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_extension_box"
         android:minHeight="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
