--- a/app/src/main/res/layout/list_item_badge_select.xml
+++ b/app/src/main/res/layout/list_item_badge_select.xml
@@ -9,6 +9,7 @@
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/badgeTv"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/badge"
