EOR-173 Don't show text when the main product don't have freebie item

--- a/app/src/main/res/layout/fragment_product_extension.xml
+++ b/app/src/main/res/layout/fragment_product_extension.xml
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_extension_box"
-        android:minHeight="200dp"
+        android:minHeight="@dimen/minimum_side_product_extension"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
