--- a/app/src/main/res/layout/fragment_promotion.xml
+++ b/app/src/main/res/layout/fragment_promotion.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tvPromotionNotFound"
         style="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/minimum_side_product_extension"
         android:gravity="center"
         android:text="@string/freebie_promotion_not_found"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/displayPromotionRecycler"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
