--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -1,208 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_filter"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/line"
-        android:layout_height="48dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/layout_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_filter"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/line"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/img_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/ic_arrow_back"
-                android:contentDescription="@string/app_name" />
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_title_product"
-                style="@style/textNameCategory"
+            <LinearLayout
+                android:id="@+id/layout_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/img_icon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="16dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_arrow_back" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_title_product"
+                    style="@style/textNameCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:ellipsize="end"
+                    android:textStyle="bold"
+                    tool:text="Category" />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/filterOptionsButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/filter_all"
+                android:src="@drawable/ic_filter_24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/lightGray"
+            app:layout_constraintBottom_toTopOf="@+id/layout_category"
+            app:layout_constraintTop_toBottomOf="@+id/layout_filter" />
+
+        <RelativeLayout
+            android:id="@+id/layout_category"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/recycler_view_list"
+            app:layout_constraintTop_toBottomOf="@+id/line">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_product_count"
+                style="@style/textNameProduct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
                 android:ellipsize="end"
                 android:textStyle="bold"
-                tool:text="Category"/>
-        </LinearLayout>
+                tool:ignore="RelativeOverlap"
+                tool:text="Category" />
 
-        <LinearLayout
-            android:id="@+id/layout_brand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/layout_product"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="16dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal">
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_brand_filter"
-                style="@style/textSize18Sp"
+            <LinearLayout
+                android:id="@+id/layout_sort"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:ellipsize="end"
-                android:text="@string/brand"
-                android:textStyle="bold"/>
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal"
+                tool:ignore="RelativeOverlap">
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_keyboard_arrow_down"
-                android:contentDescription="@string/app_name" />
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_sort"
+                    style="@style/textSize18Sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
+                    android:ellipsize="end"
+                    android:text="@string/sort"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="16dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_sort" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/app_bottom_bar_size"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintBottom_toTopOf="@id/layout_progress"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_category" />
 
         <LinearLayout
-            android:id="@+id/layout_product"
-            android:layout_width="wrap_content"
+            android:id="@+id/layout_progress"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/lightGray2"
+            android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal" >
+            app:layout_constraintTop_toBottomOf="@+id/recycler_view_list">
+
+            <ProgressBar
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="6dp" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_filter"
-                style="@style/textSize18Sp"
+                style="@style/textNameProduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:ellipsize="end"
-                android:text="@string/product"
-                android:textStyle="bold"/>
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_keyboard_arrow_down"
-                android:contentDescription="@string/app_name" />
+                android:layout_marginStart="6dp"
+                android:text="@string/loading"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:id="@+id/line"
+    <FrameLayout
+        android:id="@+id/bottomSheetContainer"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_filter"
-        app:layout_constraintBottom_toTopOf="@+id/layout_category"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/lightGray"/>
-
-    <RelativeLayout
-        android:id="@+id/layout_category"
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/line"
-        app:layout_constraintBottom_toTopOf="@+id/recycler_view_list"
-        android:layout_height="48dp">
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/txt_product_count"
-            style="@style/textNameProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:ellipsize="end"
-            android:textStyle="bold"
-            tool:text="Category"
-            tool:ignore="RelativeOverlap" />
-
-        <LinearLayout
-            android:id="@+id/layout_sort"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal"
-            tool:ignore="RelativeOverlap">
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_sort"
-                style="@style/textSize18Sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:ellipsize="end"
-                android:text="@string/sort"
-                android:textStyle="bold"/>
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_sort"
-                android:contentDescription="@string/app_name" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_list"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toTopOf="@id/layout_progress"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_category" />
-
-    <LinearLayout
-        android:id="@+id/layout_progress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/lightGray2"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_view_list"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center">
-
-        <ProgressBar
-            android:padding="6dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/loading"
-            android:layout_marginStart="6dp"
-            style="@style/textNameProduct"
-            android:textColor="@color/white"
-            android:textSize="16sp"/>
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="0dp"
+        app:layout_anchorGravity="bottom"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
