--- a/app/src/main/res/layout/item_product_filter_title.xml
+++ b/app/src/main/res/layout/item_product_filter_title.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/margin_padding_small"
-        android:background="@color/lineColor"
+        android:background="@color/graySelect"
         app:layout_constraintTop_toBottomOf="@id/tvFilterTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
