--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,5 @@
     <dimen name="share_menu_size">80dp</dimen>
     <dimen name="ic_payment_agent_size">36dp</dimen>
     <dimen name="product_compare_bar_size">56dp</dimen>
+    <dimen name="app_bottom_bar_size">56dp</dimen>
 </resources>
